# Dviglo

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: MarkdownDocs.yml  doc.yml  main.yml
Docs/: AngelScriptAPI.h  CMakeLists.txt  Doxyfile.in  GettingStarted.dox  NewFooter.html  Reference.dox  ScriptAPI.dox  Urho3D.dox
Docs/Markdown/Dviglo/: Редактор.md  Смена текущей сцены и состояния игры.md
Docs/Markdown/Git/: GitHub Actions.md  GitHub Pages.md
Source/: CMakeLists.txt
Source/Clang-Tools/Annotator/: Annotator.cpp
Source/Clang-Tools/AutoBinder/: AutoBinder.cpp
Source/Extras/: CMakeLists.txt  Readme.txt
Source/Extras/CoverityScan/: model.cpp
Source/Extras/OgreBatchConverter/: OgreBatchConverter.cpp
Source/Samples/: Sample.h
Source/Samples/02_HelloGUI/: HelloGUI.h
Source/Samples/04_StaticScene/: StaticScene.cpp  StaticScene.h
Source/Samples/05_AnimatingScene/: AnimatingScene.h
Source/Samples/06_SkeletalAnimation/: Mover.h  SkeletalAnimation.h
Source/Samples/07_Billboards/: Billboards.h
Source/Samples/08_Decals/: Decals.h
Source/Samples/09_MultipleViewports/: MultipleViewports.h
Source/Samples/10_RenderToTexture/: RenderToTexture.h  Rotator.h
Source/Tools/: CMakeLists.txt
Source/Urho3D/: CMakeLists.txt  DebugNew.h  LibraryInfo.cpp  LibraryInfo.h  Urho3DAll.h.in
cmake/Modules/: CheckUrhoLibrary.cpp  UrhoCommon.cmake
modules/: CMakeLists.txt
modules/base/: CMakeLists.txt
modules/base/src/dviglo/: CMakeLists.txt  dviglo_config.h
modules/base/src/dviglo/base/: algorithm.h  iter.h
script/: .build-options  .env-file
(+732 files in other folders)
